--- a/src/app/components/public/login/login.component.html
+++ b/src/app/components/public/login/login.component.html
@@ -9,37 +9,37 @@
               <a routerLink="/inicio" href="#"> <i class="fas fa-tasks fa-2x "></i>
               </a>  Sistema de Requisições </h3>
             <div class="form-signin">
-              <form #userForm="ngForm">
+              <form #f="ngForm">
                 <fieldset>
                   <div class="form-group">
                     <label for="exampleInputEmail1">Email</label>
-                    <input class="form-control" #emailElement #emailControl="ngModel" type="text" placeholder="Informe o Email"
-                      [(ngModel)]="email" name="email" maxlength="60" email required>
-                    <span [hidden]="emailControl.pristine || !emailControl.errors?.required" class="text-danger">Email
-                      obrigatório!</span>
-                    <span [hidden]="emailControl.pristine || !emailControl.errors?.email" class="text-danger">Email
-                      inválido!</span>
+                    <input class="form-control" name="emailControle" #emailControle="ngModel" type="text" placeholder="Informe o Email"
+                      [(ngModel)]="email"  maxlength="60" email required>
+                      <div  *ngIf="emailControle.invalid" class="text-danger">
+                      <div  *ngIf="emailControle.errors.required">Email é obrigatório</div>
+                      <div  *ngIf="emailControle.errors.email">Email inválido</div>
+                    </div>
                   </div>
                   <div class="form-group">
                     <label for="exampleInputPassword1">Senha</label>
-                    <input name="password" #passwordElement #passwordControl="ngModel" [(ngModel)]="senha" type="password"
-                      class="form-control" id="exampleInputPassword1" placeholder="Senha" required minlength="6"
+                    <input name="passwordControl"  #passwordControl="ngModel" [(ngModel)]="senha" type="password"
+                      class="form-control" placeholder="Senha" required minlength="6"
                       maxlength="30">
-                    <span [hidden]="passwordControl.pristine || !passwordControl.errors?.required" class="text-danger">Senha
+                    <span [hidden]="passwordControl.pristine || !passwordControl.valid" class="text-danger">Senha
                       obrigatória!</span>
                   </div>
                   <div class="text-center">
-                    <button type="submit" class="btn btn-info btn-block" (click)="signin()">
+                    <button type="submit" class="btn btn-info btn-block" (click)="logar()">
                       <i class="fas fa-sign-in-alt"></i> Logar</button>
 
                     <h6 class="text-center"><strong>OU</strong> </h6>
-                    <button type="submit" class="btn btn-lg btn-success btn-block text-uppercase">
+                    <button type="submit" (click)="enviaLink()" class="btn btn-lg btn-success btn-block text-uppercase">
                       <i class="far fa-envelope"></i> Recuperar</button>
                   </div>
                 </fieldset>
                 <br>
-                <div class="alert alert-dismissible alert-danger" *ngIf="msg">
-                  {{msg}}
+                <div class="alert alert-dismissible alert-danger" *ngIf="mensagem && !emailEnviado">
+                  {{mensagem}}
                 </div>
                 <div class="alert alert-dismissible alert-info" *ngIf="emailEnviado">
                   Foi enviando um email para <strong>{{email}}</strong>
