--- a/src/app/components/admin/menu/menu.component.html
+++ b/src/app/components/admin/menu/menu.component.html
@@ -1,6 +1,6 @@
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" routerLink="/"><i class="fas fa-tasks"></i>Requisições</a>
+<nav *ngIf="(user|async)?.uid" class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" routerLink="/admin/painel"><i class="fas fa-tasks"></i>Requisições</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
     aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -10,11 +10,11 @@
     <ul class="navbar-nav mr-auto">
 
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/a" href="#">
+        <a class="nav-link" routerLink="/admin/painel" href="#">
           <i class="fas fa-home"></i>Painel</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/admin/usuario" href="#">
+        <a class="nav-link" routerLink="/admin/funcionario" href="#">
           <i class="fas fa-user-plus"></i>Funcionários</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
@@ -26,6 +26,11 @@
           <i class="fas fa-school"></i> Departamentos</a>
       </li>
 
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a href="#" (click)="sair()" class="nav-link">SAIR</a>
+      </li>
     </ul>
   </div>
 
