Add template anc class departamento

--- a/src/app/components/admin/menu/menu.component.html
+++ b/src/app/components/admin/menu/menu.component.html
@@ -22,7 +22,7 @@
           <i class="fas fa-calendar-week"></i>Requisições</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/admin/escola" href="#">
+        <a class="nav-link" routerLink="/admin/departamento" href="#">
           <i class="fas fa-school"></i> Departamentos</a>
       </li>
 
