--- a/src/app/components/public/login/login.component.html
+++ b/src/app/components/public/login/login.component.html
@@ -7,30 +7,30 @@
           <div class="card-body">
             <h3 class="card-title text-center">
               <a routerLink="/inicio" href="#"> <i class="fas fa-tasks fa-2x "></i>
-              </a>  Sistema de Requisições </h3>
+              </a> Sistema de Requisições </h3>
             <div class="form-signin">
               <form #f="ngForm">
                 <fieldset>
                   <div class="form-group">
                     <label for="exampleInputEmail1">Email</label>
-                    <input class="form-control" name="emailControle" #emailControle="ngModel" type="text" placeholder="Informe o Email"
-                      [(ngModel)]="email"  maxlength="60" email required>
-                      <div  *ngIf="emailControle.invalid" class="text-danger">
-                      <div  *ngIf="emailControle.errors.required">Email é obrigatório</div>
-                      <div  *ngIf="emailControle.errors.email">Email inválido</div>
+                    <input class="form-control" name="emailControle" #emailControle="ngModel" type="text"
+                      placeholder="Informe o Email" [(ngModel)]="email" maxlength="60" email required>
+                    <div *ngIf="emailControle.invalid" class="text-danger">
+                      <div *ngIf="emailControle.errors?.required">Email é obrigatório</div>
+                      <div *ngIf="emailControle.errors?.email">Email inválido</div>
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="exampleInputPassword1">Senha</label>
-                    <input name="passwordControl"  #passwordControl="ngModel" [(ngModel)]="senha" type="password"
-                      class="form-control" placeholder="Senha" required minlength="6"
-                      maxlength="30">
-                    <span [hidden]="passwordControl.pristine || !passwordControl.valid" class="text-danger">Senha
+                    <input name="passwordControl" #passwordControl="ngModel" [(ngModel)]="senha" type="password"
+                      class="form-control" placeholder="Senha" required minlength="6" maxlength="30">
+                    <span [hidden]="passwordControl.pristine || !passwordControl.errors?.required"
+                      class="text-danger">Senha
                       obrigatória!</span>
                   </div>
                   <div class="text-center">
                     <button type="submit" class="btn btn-info btn-block" (click)="logar()">
-                      <i class="fas fa-sign-in-alt"></i> Logar</button>
+                      <i class="fas fa-sign-in-alt"></i> LOGAR</button>
 
                     <h6 class="text-center"><strong>OU</strong> </h6>
                     <button type="submit" (click)="enviaLink()" class="btn btn-lg btn-success btn-block text-uppercase">
