--- a/src/app/components/admin/departamento/departamento.component.html
+++ b/src/app/components/admin/departamento/departamento.component.html
@@ -1,3 +1,83 @@
-<p>
-  departamento works!
-</p>
+
+  <div class="col col-lg-12 col-centered">
+
+    <div class="card col-lg-12 bg-light col-centered">
+      <div class="card-header">
+        <h3> Departamentos
+          <button type="button" style="margin-right: 0px" (click)="add()" class="text-right btn btn-outline-info btn-lg">
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+          </button>
+        </h3>
+      </div>
+      <div class="card-body col-lg-12 col-centered">
+        <table class="table table-striped table-hover table-bordered col-centered">
+          <thead class="thead-dark">
+            <tr>
+              <th class="text-center">Nome</th>
+              <th class="text-center">Telefone</th>
+              <th class="text-center">Ações</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let departamento of departamentos$ | async">
+              <td class="text-center">{{departamento.nome}}</td>
+              <td class="text-center">{{departamento.telefone}}</td>
+              <td class="text-center">
+                <button type="button" (click)="selecionaDepartamento(departamento)" class="btn btn-success  ">
+                  <i class="fas fa-edit"></i>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <br>
+
+        <div class="text-center">
+          <a [routerLink]="['/admin/painel']" class="btn btn-primary ">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            Voltar</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <p-dialog header="Dados do departamento" [minWidth]="600" [contentStyle]="{'overflow':'visible'}"  [(visible)]="displayDialogDepartamento" [responsive]="true" [modal]="true">
+    <div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="departamentoSelecionado">
+
+      <div class="ui-grid-row mb-3">
+        <div class="ui-grid-col-4">
+          <label for="ocorrencia">Nome*:</label>
+        </div>
+        <div class="ui-grid-col-8 ">
+          <input type="text" pInputText [(ngModel)]="departamentoSelecionado.nome" />
+        </div>
+      </div>
+
+      <div class="ui-grid-row mb-3">
+        <div class="ui-grid-col-4">
+          <label for="ocorrencia">Telefone:</label>
+        </div>
+        <div class="ui-grid-col-8 ">
+          <p-inputMask  [(ngModel)]="departamentoSelecionado.telefone" mask="(99)9999-9999"></p-inputMask>
+        </div>
+      </div>
+
+
+
+
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ">
+        <button type="button" pButton *ngIf="!edit" label="Salvar" (click)="save()">
+          <i class="pi pi-check"> </i>
+        </button>
+        <button type="button" pButton *ngIf="edit" (click)="update()" label="Atualizar">
+          <i class="pi pi-refresh"> </i>
+        </button>
+      </div>
+    </p-footer>
+  </p-dialog>
+
+
+
