--- a/src/app/components/admin/funcionario/funcionario.component.html
+++ b/src/app/components/admin/funcionario/funcionario.component.html
@@ -1,3 +1,106 @@
-<p>
-  funcionario works!
-</p>
+<div class="col col-lg-12 col-centered">
+
+  <div class="card col-lg-12 bg-light col-centered">
+    <div class="card-header">
+      <h3> Funcionários
+        <button type="button" style="margin-right: 0px" (click)="add()" class="text-right btn btn-outline-info btn-lg">
+          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        </button>
+      </h3>
+
+      <ng-select [(ngModel)]="departamentoFiltro">
+        <ng-option [value]="'TODOS'">TODOS</ng-option>
+        <ng-option *ngFor="let departamento of departamentos$ | async" [value]="departamento.nome">{{departamento.nome}}
+        </ng-option>
+      </ng-select>
+
+    </div>
+    <div class="card-body col-lg-12 col-centered">
+      <table class="table table-striped table-hover table-bordered col-centered">
+        <thead class="thead-dark">
+          <tr>
+            <th class="text-center">Nome</th>
+            <th class="text-center">Email</th>
+            <th class="text-center">Departamento</th>
+            <th class="text-center">Função</th>
+            <th class="text-center">Ações</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let funcionario of funcionarios$ | async | filter :  departamentoFiltro">
+            <td class="text-center">{{funcionario.nome}}</td>
+            <td class="text-center">{{funcionario.email}}</td>
+            <td class="text-center">{{funcionario.departamento.nome}}</td>
+            <td class="text-center">{{funcionario.funcao}}</td>
+            <td class="text-center">
+              <button type="button" (click)="selecionaFuncionario(funcionario)" class="btn btn-success  ">
+                <i class="fas fa-edit"></i>
+              </button>
+              <button type="button" (click)="delete(funcionario)" class="btn btn-danger  ">
+                <i class="fas fa-trash"></i>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <br>
+
+      <div class="text-center">
+        <a [routerLink]="['/admin/painel']" class="btn btn-primary ">
+          <i class="fa fa-search" aria-hidden="true"></i>
+          Voltar</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<p-dialog header="Dados do funcionário" [minWidth]="600" [contentStyle]="{'overflow':'visible'}"
+  [(visible)]="displayDialogFuncionario" [responsive]="true" [modal]="true">
+  <div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="form.value">
+    <form [formGroup]="form">
+      <div class="ui-grid-row mb-3">
+        <div class="ui-grid-col-4">
+          <label for="ocorrencia">Nome*:</label>
+        </div>
+        <div class="ui-grid-col-8 ">
+          <input type="text" pInputText formControlName="nome" />
+        </div>
+      </div>
+      <div class="ui-grid-row mb-3">
+        <div class="ui-grid-col-4">
+          <label for="ocorrencia">Email*:</label>
+        </div>
+        <div class="ui-grid-col-8 ">
+          <input type="text" pInputText formControlName="email" />
+        </div>
+      </div>
+      <div class="ui-grid-row mb-3">
+        <div class="ui-grid-col-4">
+          <label for="ocorrencia">Departamento*:</label>
+        </div>
+        <div class="ui-grid-col-8 ">
+          <ng-select [items]="departamentos$ | async" bindLabel="nome" formControlName="departamento">
+          </ng-select>
+        </div>
+
+      </div>
+      <div class="ui-grid-row mb-3">
+        <div class="ui-grid-col-4">
+          <label for="ocorrencia">Função:</label>
+        </div>
+        <div class="ui-grid-col-8 ">
+          <input type="text" pInputText formControlName="funcao" />
+        </div>
+      </div>
+    </form>
+  </div>
+  <p-footer>
+    <div class="text-warning text-left">*Preenchimento Obrigatório</div>
+    <div class="ui-dialog-buttonpane ">
+      <button [disabled]="!form.valid" type="button" class="btn btn-primary" (click)="save()">
+        <i class="fas fa-check-circle"></i> {{edit ? 'Atualizar' : 'Salvar'}}
+      </button>
+    </div>
+  </p-footer>
+</p-dialog>
