Ajustes no componente funcionario

--- a/src/app/components/admin/funcionario/funcionario.component.html
+++ b/src/app/components/admin/funcionario/funcionario.component.html
@@ -69,7 +69,7 @@
       </div>
       <div class="ui-grid-row mb-3">
         <div class="ui-grid-col-4">
-          <label for="ocorrencia">Email*:</label>
+          <label for="email">Email*:</label>
         </div>
         <div class="ui-grid-col-8 ">
           <input type="text" pInputText formControlName="email" />
@@ -77,17 +77,16 @@
       </div>
       <div class="ui-grid-row mb-3">
         <div class="ui-grid-col-4">
-          <label for="ocorrencia">Departamento*:</label>
+          <label for="departamento">Departamento*:</label>
         </div>
         <div class="ui-grid-col-8 ">
           <ng-select [items]="departamentos$ | async" bindLabel="nome" formControlName="departamento">
           </ng-select>
         </div>
-
       </div>
       <div class="ui-grid-row mb-3">
         <div class="ui-grid-col-4">
-          <label for="ocorrencia">Função:</label>
+          <label for="funcao">Função:</label>
         </div>
         <div class="ui-grid-col-8 ">
           <input type="text" pInputText formControlName="funcao" />
@@ -96,7 +95,7 @@
     </form>
   </div>
   <p-footer>
-    <div class="text-warning text-left">*Preenchimento Obrigatório</div>
+    <div *ngIf="form.controls['nome'].errors || form.controls['email'].errors || form.controls['departamento'].errors "class="text-warning text-left ">*Preenchimento Obrigatório</div>
     <div class="ui-dialog-buttonpane ">
       <button [disabled]="!form.valid" type="button" class="btn btn-primary" (click)="save()">
         <i class="fas fa-check-circle"></i> {{edit ? 'Atualizar' : 'Salvar'}}
