Requisito Cadastrar Requisicao

--- a/src/app/components/admin/menu/menu.component.html
+++ b/src/app/components/admin/menu/menu.component.html
@@ -18,7 +18,7 @@
           <i class="fas fa-user-plus"></i>Funcionários</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/admin/eleicao" href="#">
+        <a class="nav-link" routerLink="/admin/requisicao" href="#">
           <i class="fas fa-calendar-week"></i>Requisições</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
