--- a/src/app/components/admin/requisicao/requisicao.component.html
+++ b/src/app/components/admin/requisicao/requisicao.component.html
@@ -1,3 +1,91 @@
-<p>
-  requisicao works!
-</p>
+<div class="col col-lg-12 col-centered">
+
+  <div class="card col-lg-12 bg-light col-centered">
+    <div class="card-header">
+      <h3> Minhas Requisições
+        <button type="button" style="margin-right: 0px" (click)="add()" class="text-right btn btn-outline-info btn-lg">
+          <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        </button>
+      </h3>
+
+    </div>
+    <div class="card-body col-lg-12 col-centered">
+      <table class="table table-striped table-hover table-bordered col-centered">
+        <thead class="thead-dark">
+          <tr>
+            <th class="text-center">Abertura</th>
+            <th class="text-center">Última atualização</th>
+            <th class="text-center">Departamento</th>
+            <th class="text-center">Status</th>
+            <th class="text-center">Movimentações</th>
+            <th class="text-center">Ações</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let requisicao of requisicoes$ | async ">
+            <td class="text-center">{{requisicao.dataAbertura.toDate() | date : 'dd/MM/yyyy HH:mm'}}</td>
+            <td class="text-center">{{requisicao.ultimaAtualizacao.toDate() | date : 'dd/MM/yyyy HH:mm'}}</td>
+            <td class="text-center">{{requisicao.destino.nome}}</td>
+            <td class="text-center">{{requisicao.status}}</td>
+            <td class="text-center">
+              <span class="badge badge-pill badge-secondary">
+                {{!requisicao.movimentacoes?.length ? '0': requisicao.movimentacoes?.length}}
+              </span>
+            </td>
+            <td class="text-center">
+              <button type="button" (click)="selecionaRequisicao(requisicao)" class="btn btn-success  ">
+                <i class="fas fa-edit"></i>
+              </button>
+              <button type="button" (click)="delete(requisicao)" class="btn btn-danger  ">
+                <i class="fas fa-trash"></i>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <br>
+
+      <div class="text-center">
+        <a [routerLink]="['/admin/painel']" class="btn btn-primary ">
+          <i class="fa fa-search" aria-hidden="true"></i>
+          Voltar</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<p-dialog header="Dados do funcionário" [minWidth]="600" [contentStyle]="{'overflow':'visible'}"
+  [(visible)]="displayDialogRequisicao" [responsive]="true" [modal]="true">
+  <div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="form.value">
+    <form [formGroup]="form">
+      <div class="ui-grid-row mb-3">
+        <div class="ui-grid-col-4">
+          <label for="departamento">Destino*:</label>
+        </div>
+        <div class="ui-grid-col-8 ">
+          <ng-select [items]="departamentos$ | async" bindLabel="nome" formControlName="destino">
+          </ng-select>
+        </div>
+      </div>
+      <div class="ui-grid-row mb-3">
+        <div class="ui-grid-col-4">
+          <label for="descricao">Descricao*:</label>
+        </div>
+        <div class="ui-grid-col-8 ">
+          <textarea rows="5" cols="30" pInputTextarea formControlName="descricao"></textarea>
+        </div>
+      </div>
+
+    </form>
+  </div>
+  <p-footer>
+    <div *ngIf="form.controls['destino'].errors || form.controls['descricao'].errors" class="text-warning text-left ">
+      *Preenchimento Obrigatório</div>
+    <div class="ui-dialog-buttonpane ">
+      <button [disabled]="!form.valid" type="button" class="btn btn-primary" (click)="save()">
+        <i class="fas fa-check-circle"></i> {{edit ? 'Atualizar' : 'Salvar'}}
+      </button>
+    </div>
+  </p-footer>
+</p-dialog>
