--- a/src/app/components/admin/movimentacao/lista/lista.component.html
+++ b/src/app/components/admin/movimentacao/lista/lista.component.html
@@ -2,11 +2,9 @@
   [(visible)]="displayDialogMovimentacoes" (onHide)="onClose()" [responsive]="true" [modal]="true">
 
   <div class="col-lg-12 bg-light col-centered">
-
     <table class="table table-striped table-hover table-bordered col-centered">
       <thead class="thead-dark">
         <tr>
-
           <th class="text-center">Data</th>
           <th class="text-center">Funcionario</th>
           <th class="text-center">Status</th>
@@ -63,7 +61,7 @@
     <div *ngIf="form.controls['status'].errors || form.controls['descricao'].errors" class="text-warning text-left ">
       *Preenchimento Obrigatório</div>
     <div class="ui-dialog-buttonpane ">
-      <button [disabled]="!form.valid" type="button" class="btn btn-primary" (click)="save()">
+      <button [disabled]="!form.valid" type="button" class="btn btn-primary" (click)="update()">
         <i class="fas fa-check-circle"></i> {{edit ? 'Atualizar' : 'Salvar'}}
       </button>
     </div>
