--- a/src/app/components/admin/movimentacao/movimentacao.component.html
+++ b/src/app/components/admin/movimentacao/movimentacao.component.html
@@ -50,7 +50,7 @@
 </div>
 
 
-<p-dialog header="Dados da Requisição" [minWidth]="600" [contentStyle]="{'overflow':'visible'}"
+<p-dialog header="Dados da Requisição" [style]="{ width: '80vw' }" [contentStyle]="{'overflow':'visible'}"
   [(visible)]="displayDialogMovimentacao" [responsive]="true" [modal]="true">
   <div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="form.value">
     <div class="ui-grid-row mb-3">
@@ -89,15 +89,15 @@
       </div>
     </form>
   </div>
-  <p-footer>
+  <p-toolbar>
     <div *ngIf="form.controls['status'].errors || form.controls['descricao'].errors" class="text-warning text-left ">
       *Preenchimento Obrigatório</div>
-    <div class="ui-dialog-buttonpane ">
+      <div class="p-toolbar-group-right">
       <button [disabled]="!form.valid" type="button" class="btn btn-primary" (click)="save()">
         <i class="fas fa-check-circle"></i> {{edit ? 'Atualizar' : 'Salvar'}}
       </button>
     </div>
-  </p-footer>
+  </p-toolbar>
 </p-dialog>
 
 <app-lista [displayDialogMovimentacoes]="displayDialogMovimentacoes" [movimentacoes]="movimentacoes"
