--- a/src/app/components/admin/funcionario/funcionario.component.html
+++ b/src/app/components/admin/funcionario/funcionario.component.html
@@ -62,59 +62,43 @@
 <p-dialog header="Dados do funcionário" [style]="{ width: '80vw' }" [contentStyle]="{'overflow':'visible'}"
   [(visible)]="displayDialogFuncionario" [responsive]="true" [modal]="true">
   <div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="form.value">
-    <form [formGroup]="form">
-      <div class="ui-grid-row mb-3">
-        <div class="ui-grid-col-4">
-          <label for="ocorrencia">Nome*:</label>
-        </div>
-        <div class="ui-grid-col-8 ">
-          <input type="text" pInputText formControlName="nome" />
-        </div>
-      </div>
-      <div class="ui-grid-row mb-3">
-        <div class="ui-grid-col-4">
-          <label for="email">Email*:</label>
-        </div>
-        <div class="ui-grid-col-8 ">
-          <input type="text" pInputText formControlName="email" />
-        </div>
-      </div>
-      <div class="ui-grid-row mb-3">
-        <div class="ui-grid-col-4">
-          <label for="departamento">Departamento*:</label>
-        </div>
-        <div class="ui-grid-col-8 ">
-          <ng-select [items]="departamentos$ | async" bindLabel="nome" formControlName="departamento">
-          </ng-select>
-        </div>
-      </div>
-      <div class="ui-grid-row mb-3">
-        <div class="ui-grid-col-4">
-          <label for="funcao">Função:</label>
-        </div>
-        <div class="ui-grid-col-8 ">
-          <input type="text" pInputText formControlName="funcao" />
-        </div>
-      </div>
-      <div class="ui-grid-row mb-3">
-        <div class="ui-grid-col-4">
-          <label for="foto">Foto:</label>
-        </div>
-        <div class="ui-grid-col-8 ">
-          <input type="file" #inputFile class="form-control" (change)="upload($event)" />
-          <progress style="width: 100%;" max="100" [value]="(uploadPercent | async)"></progress>
-        </div>
+    <form [formGroup]="form" class="p-fluid p-formgrid p-grid">
+
+      <div class="p-field p-col-12 p-md-6">
+        <label for="ocorrencia">Nome*:</label>
+        <input type="text" pInputText formControlName="nome" />
       </div>
 
+      <div class="p-field p-col-12 p-md-6">
+        <label for="email">Email*:</label>
+        <input type="text" pInputText formControlName="email" />
+      </div>
+
+      <div class="p-field p-col-12 p-md-6">
+        <label for="departamento">Departamento*:</label>
+        <ng-select [items]="departamentos$ | async" bindLabel="nome" formControlName="departamento">
+        </ng-select>
+      </div>
+
+      <div class="p-field p-col-12 p-md-6">
+        <label for="funcao">Função:</label>
+        <input type="text" pInputText formControlName="funcao" />
+      </div>
+
+      <div class="p-field p-col-12 p-md-6">
+        <label for="foto">Foto:</label>
+        <input type="file" #inputFile class="form-control" (change)="upload($event)" />
+        <progress style="width: 100%;" max="100" [value]="(uploadPercent | async)"></progress>
+      </div>
     </form>
   </div>
-  <p-toolbar>
-    <div *ngIf="form.controls['nome'].errors || form.controls['email'].errors || form.controls['departamento'].errors "
-      class="text-warning text-left ">*Preenchimento Obrigatório</div>
-    <div class="p-toolbar-group-right">
-      <button [disabled]="!form.valid" type="button" class="btn btn-primary" (click)="save()">
+  <div *ngIf="form.controls['nome'].errors || form.controls['email'].errors || form.controls['departamento'].errors "
+    class="text-warning  ">*Preenchimento Obrigatório</div>
+
+    <div class="p-d-flex p-jc-end ">
+      <button [disabled]="!form.valid" type="button" class="btn btn-primary " (click)="save()">
         <i class="fas fa-check-circle"></i> {{edit ? 'Atualizar' : 'Salvar'}}
       </button>
     </div>
-  </p-toolbar>
+
 </p-dialog>
