Update Menu: Close tag nav

--- a/src/app/components/admin/menu/menu.component.html
+++ b/src/app/components/admin/menu/menu.component.html
@@ -1,4 +1,3 @@
-
 <nav *ngIf="(user|async)?.uid" class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" routerLink="/admin/painel"><i class="fas fa-tasks"></i>Requisições</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
@@ -33,4 +32,4 @@
       </li>
     </ul>
   </div>
-
+</nav>
