--- a/src/app/components/admin/movimentacao/movimentacao.component.html
+++ b/src/app/components/admin/movimentacao/movimentacao.component.html
@@ -52,53 +52,38 @@
 
 <p-dialog header="Dados da Requisição" [style]="{ width: '80vw' }" [contentStyle]="{'overflow':'visible'}"
   [(visible)]="displayDialogMovimentacao" [responsive]="true" [modal]="true">
-  <div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="form.value">
-    <div class="ui-grid-row mb-3">
-      <div class="ui-grid-col-4">
-        <label for="departamento">Solicitante:</label>
-      </div>
+  <div class="p-fluid p-formgrid p-grid" *ngIf="form.value">
+    <div class="p-field p-col-12 p-md-12">
+      <label for="departamento">Solicitante:</label>
       <div class="ui-grid-col-8 text-primary">
         {{requisicaoSelecionada?.solicitante.nome}}
       </div>
     </div>
-    <div class="ui-grid-row mb-3">
-      <div class="ui-grid-col-4">
-        <label for="descricao">Solicitação:</label>
-      </div>
-      <div class="ui-grid-col-8 ">
-        <textarea rows="5" cols="30" disabled pInputTextarea [value]="requisicaoSelecionada?.descricao"></textarea>
-      </div>
+    <div class="p-field p-col-12 p-md-12">
+      <label for="solicitacao">Solicitação:</label>
+      <textarea rows="5" cols="30" disabled pInputTextarea [value]="requisicaoSelecionada?.descricao"></textarea>
     </div>
-    <form [formGroup]="form">
-      <div class="ui-grid-row mb-3">
-        <div class="ui-grid-col-4">
-          <label for="departamento">Status*:</label>
-        </div>
-        <div class="ui-grid-col-8 ">
-          <ng-select [items]="listaStatus" formControlName="status">
-          </ng-select>
-        </div>
-      </div>
-      <div class="ui-grid-row mb-3">
-        <div class="ui-grid-col-4">
-          <label for="descricao">Descricao*:</label>
-        </div>
-        <div class="ui-grid-col-8 ">
-          <textarea rows="5" cols="30" pInputTextarea formControlName="descricao"></textarea>
-        </div>
-      </div>
-    </form>
   </div>
-  <p-toolbar>
-    <div *ngIf="form.controls['status'].errors || form.controls['descricao'].errors" class="text-warning text-left ">
-      *Preenchimento Obrigatório</div>
-      <div class="p-toolbar-group-right">
-      <button [disabled]="!form.valid" type="button" class="btn btn-primary" (click)="save()">
-        <i class="fas fa-check-circle"></i> {{edit ? 'Atualizar' : 'Salvar'}}
-      </button>
+  <form [formGroup]="form" class="p-fluid p-formgrid p-grid">
+    <div class="p-field p-col-12 p-md-6">
+      <label for="departamento">Status*:</label>
+      <ng-select [items]="listaStatus" formControlName="status">
+      </ng-select>
     </div>
-  </p-toolbar>
+    <div class="p-field p-col-12 p-md-12">
+      <label for="descricao">Descricao*:</label>
+      <textarea rows="5" cols="30" pInputTextarea formControlName="descricao"></textarea>
+    </div>
+  </form>
+  <div *ngIf="form.controls['status'].errors || form.controls['descricao'].errors" class="text-warning text-left ">
+    *Preenchimento Obrigatório</div>
+  <div class="p-d-flex p-jc-end">
+    <button [disabled]="!form.valid" type="button" class="btn btn-primary" (click)="save()">
+      <i class="fas fa-check-circle"></i> {{edit ? 'Atualizar' : 'Salvar'}}
+    </button>
+  </div>
 </p-dialog>
 
 <app-lista [displayDialogMovimentacoes]="displayDialogMovimentacoes" [movimentacoes]="movimentacoes"
-  [requisicaoSelecionada]="requisicaoSelecionada" [funcionarioLogado]="funcionarioLogado" (displayChange)="onDialogClose($event)"></app-lista>
+  [requisicaoSelecionada]="requisicaoSelecionada" [funcionarioLogado]="funcionarioLogado"
+  (displayChange)="onDialogClose($event)"></app-lista>
