--- a/src/app/components/admin/funcionario/funcionario.component.css
+++ b/src/app/components/admin/funcionario/funcionario.component.css
@@ -2,17 +2,8 @@
     background-color: rgb(235, 185, 185);
 }
 
-.ui-grid-row div {
-    padding: 4px 10px
-}
-
-.ui-grid-row div label {
+label {
     font-weight: bold;
-}
-
-.col-centered {
-    float: none;
-    margin: 0 auto;
 }
 
 .btn {
